--- a/case-heat-orozco.html
+++ b/case-heat-orozco.html
@@ -79,13 +79,13 @@
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-heat text-white"><b>How It Works</b></span></p>
-			<p>By placing heat exactly where it is needed, at the root zone, Manfred’s greenhouse uses a fifth of the fuel, saving them over 80% on their bill. They can now use this money on other projects in the green- house. Because he was able to set an opti- mum root zone temperature, his plants are robust and healthy, have less disease, all with quicker turns and better profits. The greenhouse no longer has cold spots, and Manfred has a healthier and more consis- tent cannabis crop.</p>
+			<p>By placing heat exactly where it is needed, at the root zone, Manfred’s greenhouse uses a fifth of the fuel, saving them over 80% on their bill. They can now use this money on other projects in the greenhouse. Because he was able to set an optimum root zone temperature, his plants are robust and healthy, have less disease, all with quicker turns and better profits. The greenhouse no longer has cold spots, and Manfred has a healthier and more consistent cannabis crop.</p>
 			<p>The MegaTube Bed Heating System is a network of high performance and durable tubing, evenly spaced, and buried in the</p>
 		</div>
 		<div class="col-md-4">	
 			<p>growing medium. This system is designed to be tough and proven to last years with minimal maintenance.</p>
-			<p>The tubes are connected to special mani folds that balance the flow of warm water produced by a Raypak highly efficient con densing boiler system.</p>
-			<p>BioTherm shipped all technical compo nents pre-assembled for easy installation. Because BioTherm supplied clear instruc tions and technical drawings, Manfred’s crew had no problems installing the bed heating system. He also felt comfortable because an experienced technician was just a phone call away.</p>
+			<p>The tubes are connected to special manifolds that balance the flow of warm water produced by a Raypak highly efficient condensing boiler system.</p>
+			<p>BioTherm shipped all technical components pre-assembled for easy installation. Because BioTherm supplied clear instruc tions and technical drawings, Manfred’s crew had no problems installing the bed heating system. He also felt comfortable because an experienced technician was just a phone call away.</p>
 		</div>
 
 	</div>
@@ -137,7 +137,7 @@
 				<p><b>4.</b> The cost of heating a greenhouse to a consistent temperature using traditional forced air heating methods can be exorbitant, especially at night. The irregular airflow of these systems create pockets of cool air which require higher energy expenditures to reach and warm. BioTherm systems use hydronic heating, which heats uniformly, saving energy by avoiding pockets of cold air, and allowing the ambient air temperature to be cooler.</p>
 			</div>
 			<div class="col">
-				<p><b>5.</b> When you use BioTherm’s root zone hydronic heating systems, you can experi- ence a huge drop in energy costs--in some cases by as much as 50%. This saves you additional money beyond that saved by using sunlight in a green- house setting. When you combine these savings with the additional revenue gained from more frequent, greater harvests, the additional profits can be staggering.</p>
+				<p><b>5.</b> When you use BioTherm’s root zone hydronic heating systems, you can experience a huge drop in energy costs--in some cases by as much as 50%. This saves you additional money beyond that saved by using sunlight in a greenhouse setting. When you combine these savings with the additional revenue gained from more frequent, greater harvests, the additional profits can be staggering.</p>
 			</div>
 		</div>
 		<div class="row">
