--- a/hydro.html
+++ b/hydro.html
@@ -124,9 +124,9 @@
 				<div class="col-md-4">
 					<a href="case-hydro-mansfield.html">
 					<span class="d-block p-4 bg-dark text-white">
-						<img src="img/case_micheals_flowers.jpg" class="figure-img img-fluid rounded" alt="">
+						<img src="img/case_mansfield.jpg" class="figure-img img-fluid rounded" alt="">
 						<img src="img/front-hydro-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-						<h4><b>Mansfield Growers</b> <br />Mansfield, OH <br /><b>Reducing Labor Costs and Water Conservation</b></h4>
+						<h4><b>Mansfield Growers</b> <br />Mansfield, OH <br /><br /><b>Reducing Labor Costs and Water Conservation</b></h4>
 					</span>
 					</a>
 					<span class="d-block p-2 bg-hydro text-white"></span>
@@ -144,9 +144,9 @@
 				<div class="col-md-4">
 					<a href="case-hydro-holy-city-farms.html">
 					<span class="d-block p-4 bg-dark text-white">
-						<img src="img/case_holy-city-farms.jpg" class="figure-img img-fluid rounded" alt="">
+						<img src="img/case_holy-city-farms_cover.jpg" class="figure-img img-fluid rounded" alt="">
 						<img src="img/front-hydro-white-full.png" class="float-right" width=80px style="opacity: 0.1;"/> 
-						<h4><b>Elizabeth Mitchell</b> <br />Holy City Farms<br />Charleston, SC <br /><b>Increased Yield and Healthier Plants</b></h4>
+						<h4><b>Elizabeth Mitchell</b> <br />Holy City Farms<br />Charleston, SC <br /><b>Increased Yield <br />and Healthier Plants</b></h4>
 					</span>
 					</a>
 					<span class="d-block p-2 bg-hydro text-white"></span>
