--- a/case-hydro-fessler.html
+++ b/case-hydro-fessler.html
@@ -68,15 +68,15 @@
 	<div class="row">
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challenge</b></span></p>
-			<p>Fesslers Nursery wanted to expand their production space to meet their ever-grow- ing market demand. However, they also needed to provide the highest quality product, with the lowest labor cost, all the while maintaining their earth-friendly business practices.</p>
+			<p>Fessler's Nursery wanted to expand their production space to meet their ever-growing market demand. However, they also needed to provide the highest quality product, with the lowest labor cost, all the while maintaining their earth-friendly business practices.</p>
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-hydro text-white"><b>The BioTherm Solution</b></span></p>
-			<p>BioTherm <a href="hydro-flood.html">Cascade Floors</a> are the most efficient method of sub irrigation. Water is pumped to individual irrigation zones, where a thin skim of water evenly irrigates every plant as it flows from the fill side to the drain side of the zone.</p>
+			<p>BioTherm <a href="hydro-flood.html">Cascade Floors</a> are the most efficient method of sub-irrigation. Water is pumped to individual irrigation zones, where a thin skim of water evenly irrigates every plant as it flows from the fill side to the drain side of the zone.</p>
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-hydro text-white"><b>How It Works</b></span></p>
-			<p><a href="hydro-flood.html">Cascade Floors</a> use a unidirectional slope which allows gravity to drain the system. Because the system fills and drains simul- taneously, water is available for same cycle use. These design features allow for a faster irrigation cycle with less energy expended for pumping. Reduced labor and water conservation are additional benefits of a BioTherm Cascade Floor.</p>
+			<p><a href="hydro-flood.html">Cascade Floors</a> use a unidirectional slope which allows gravity to drain the system. Because the system fills and drains simultaneously, water is available for same-cycle use. These design features allow for a faster irrigation cycle with less energy expended for pumping. Reduced labor and water conservation are additional benefits of a BioTherm Cascade Floor.</p>
 		</div>
 	</div>
 	
