--- a/case-hydro-mansfield.html
+++ b/case-hydro-mansfield.html
@@ -73,11 +73,11 @@
 		<div class="col-md-4">
 			<br />
 			<p><span class="d-block p-2 bg-hydro text-white"><b>The Challenge</b></span></p>
-			<p>David won two new contracts to expand the reach of his regional greenhouse facili- ty, but he knew he would have to expand his production, as well. In order to control labor costs, while simultaneously increas- ing the square footage of his growing area without sacrificing quality, David decided to build a new flood floor equipped green- house.</p>
+			<p>David won two new contracts to expand the reach of his regional greenhouse facility, but he knew he would have to expand his production, as well. In order to control labor costs, while simultaneously increasing the square footage of his growing area without sacrificing quality, David decided to build a new flood floor equipped greenhouse.</p>
 		</div>	
 		<div class="col-md-4">
 			<p><br /><span class="d-block p-2 bg-hydro text-white"><b>The BioTherm Solution</b></span></p>
-			<p>BioTherm installed a pump and drain system to work in concert with a engi- neered concrete floor. The system is designed with precision in mind, providing greater control of nutrient uptake, water- ing time and preventing overwatering. With up to a 95% reduction in labor costs, a flood floor equipped greenhouse can be operated by just one technician spanning multiple acres.</p>
+			<p>BioTherm installed a pump and drain system to work in concert with a engineered concrete floor. The system is designed with precision in mind, providing greater control of nutrient uptake, watering time and preventing overwatering. With up to a 95% reduction in labor costs, a flood floor equipped greenhouse can be operated by just one technician spanning multiple acres.</p>
 		</div>
 		<div class="col-md-4">
 			<p><br /><span class="d-block p-2 bg-hydro text-white"><b>How It Works</b></span></p>
