--- a/case-air-sunnyside.html
+++ b/case-air-sunnyside.html
@@ -68,7 +68,7 @@
 	<div class="row">
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-success text-white"><b>The Challenge</b></span></p>
-			<p>Nancy knew that greenhouses are prone to suffer from reduced levels of CO2 and that increasing the CO2 concentration above ambient could help boost her crop yield. However, her experiences with CO2 burners had always been disappointing and she wasn’t interested in a liquid CO2 system. One option that had always intrigued her was to use exhaust gas from a boiler system, but she had assumed the technology was either unsafe or simply too expensive to implement. BioTherm had already success- fully provided rootzone heating and oxygen infusion technologies to help her grow bigger, healthier crops in less time. Since those investments had paid for themselves very quickly, she wanted to understand how a CO2 system would benefit her and requested a proposal for a centralized CO2 Enrichment system which could increase her yield even more.</p>
+			<p>Nancy knew that greenhouses are prone to suffer from reduced levels of CO2 and that increasing the CO2 concentration above ambient could help boost her crop yield. However, her experiences with CO2 burners had always been disappointing and she wasn’t interested in a liquid CO2 system. One option that had always intrigued her was to use exhaust gas from a boiler system, but she had assumed the technology was either unsafe or simply too expensive to implement. BioTherm had already successfully provided rootzone heating and oxygen infusion technologies to help her grow bigger, healthier crops in less time. Since those investments had paid for themselves very quickly, she wanted to understand how a CO2 system would benefit her and requested a proposal for a centralized CO2 Enrichment system which could increase her yield even more.</p>
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-success text-white"><b>The BioTherm Solution</b></span></p>
@@ -76,9 +76,7 @@
 		</div>
 		<div class="col-md-4">
 			<p><span class="d-block p-2 bg-success text-white"><b>How It Works</b></span></p>
-			<p>“With a completely heated floor surface, we were able to shorten our grow time by 4-5 weeks, increase production, and grow a more consistent and healthy crop,” Patrick said.</p>
-			<p>Also, while maintaining a gentle and con- sistent heat for his hanging basket crop, the DuoFin Top Heat System did double duty as a snow melt system for his greenhouses.</p>
-			<p>With the added benefit of high-efficiency boilers, Patrick was able to save money on fuel, adding to his bottom line. Because of the increase in energy savings, Michael’s even qualified for a grant which helped pay for the boilers!</p>
+			<p>BioTherm CO2 systems distribute the exhaust CO2 from the boiler system out into the greenhouse zones. A stainless steel or fiberglass blower fan works in tandem with a custom-built control panel to extract flue gas CO2 and direct it through PVC supply lines out into the greenhouse zones. After reaching the greenhouse zones, actuated zone valves open or close to release gas through correctly sized precision orifice polytubes where CO2 is emitted into the greenhouse environment. When CO2 concentration is too high at the blower assembly, fresh air can be mixed to produce the exact CO2 concentration desired. Carbon Monoxide (CO) produced from combustion is also continuously monitored with sensors both in the greenhouse and in the boiler room to ensure human and plant safety. BioTherm CO2 systems integrate with many common environmental control systems to ensure growers can maintain their desired CO2 levels at all times.</p>
 		</div>
 	</div>
 
@@ -90,7 +88,7 @@
 				<img src="img/air_CO2.jpg" class="figure-img img-fluid rounded" alt=""/>
 				<span class="d-block p-2 bg-success text-white"></span>
 				<br />
-				<p>CO2 levels are naturally low in a greenhouse environment as plants use available CO2 as part of the photosynthetic process. Increasing CO2 levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO2 System can be easily integrated to achieve elevated CO2 levels in the greenhouse environment. BioTherm systems pull CO2 directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensuring other harmful gases are kept at a safe level. With a BioTherm CO2 System, there is no need for large bulk tanks, or individual CO2 burners. These systems can be used in both indoor and outdoor greenhouse operations.</p>
+				<p>CO2 levels are naturally low in a greenhouse environment as plants use available CO2 as part of the photosynthetic process. Increasing CO2 levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO2 System can be easily integrated to achieve elevated CO2 levels in the greenhouse environment. A BioTherm systempulls CO2 gases directly from the boiler’s exhaust and distributes CO2 uniformly thoughout the greenhouse environment, while ensuring other harmful gases are kept at a safe level. With a BioTherm CO2 System, there is no need for large bulk tanks, or individual CO2 burners. These systems can be used in both indoor and outdoor greenhouse operations.</p>
 			</div>
 		</div>
 	</div>
