--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_J_REARDEN.jpg" />
+					<img class="imageHoverLoad lazy img rounded img-raised" src="img/about_J_REARDEN.jpg" data-original="img/about_J_REARDEN.jpg" data-hover="img/about_M_MUCHOW.jpg"/>
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Jim Reardon</h4>
@@ -492,6 +492,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.js"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
