--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="imageHoverLoad lazy img rounded img-raised" src="img/about_J_REARDEN.jpg" data-original="img/about_J_REARDEN.jpg" data-hover="img/about_M_MUCHOW.jpg"/>
+					<img class="imageHoverLoad lazy img" src="img/about_J_REARDEN.jpg" data-original="img/about_J_REARDEN.jpg" data-hover="img/about_J_REARDEN-2.jpg"/>
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Jim Reardon</h4>
@@ -194,7 +194,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_M_MUCHOW.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_M_MUCHOW.jpg" data-original="img/about_M_MUCHOW.jpg" data-hover="img/about_M_MUCHOW-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">	Mike Muchow</h4>
@@ -212,7 +212,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_T_HUMPHREY.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_T_HUMPHREY.jpg" data-original="img/about_T_HUMPHREY.jpg" data-hover="img/about_T_HUMPHREY-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Thad Humphrey, P.E.</h4>
@@ -228,7 +228,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_S_RANSFORD.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_S_RANSFORD.jpg" data-original="img/about_S_RANSFORD.jpg" data-hover="img/about_S_RANSFORD.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Shawn Ransford</h4>
@@ -245,7 +245,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_D_WHITTEMORE.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_D_WHITTEMORE.jpg" data-original="img/about_D_WHITTEMORE.jpg" data-hover="img/about_D_WHITTEMORE-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Dan Whittemore</h4>
@@ -262,7 +262,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_D_CARDONA.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_D_CARDONA.jpg" data-original="img/about_D_CARDONA.jpg" data-hover="img/about_D_CARDONA-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Daniel Cardona</h4>
@@ -281,7 +281,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_D_KUIPERS.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_D_KUIPERS.jpg" data-original="img/about_D_KUIPERS.jpg" data-hover="img/about_D_KUIPERS-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Dan Kuipers</h4>
@@ -297,7 +297,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img rounded img-raised" src="img/about_C_TAMAGNI.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_C_TAMAGNI.jpg" data-original="img/about_C_TAMAGNI.jpg" data-hover="img/about_C_TAMAGNI-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Carol Tamagni</h4>
@@ -313,7 +313,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_S_REARDEN.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_S_REARDEN.jpg" data-original="img/about_S_REARDEN.jpg" data-hover="img/about_S_REARDEN-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Sam Rearden</h4>
@@ -329,7 +329,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_M_WINKLER.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_M_WINKLER.jpg" data-original="img/about_M_WINKLER.jpg" data-hover="img/about_M_WINKLER-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Matt Winkler</h4>
@@ -347,7 +347,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_J_REYES.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_J_REYES.jpg" data-original="img/about_J_REYES.jpg" data-hover="img/about_J_REYES-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Julio Reyes</h4>
@@ -363,7 +363,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_B_THAMMAVONG.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_B_THAMMAVONG.jpg" data-original="img/about_B_THAMMAVONG.jpg" data-hover="img/about_B_THAMMAVONG-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Bobby Thammavong</h4>
@@ -379,7 +379,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_M_KAVANHVIGIL.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_M_KAVANHVIGIL.jpg" data-original="img/about_M_KAVANHVIGIL.jpg" data-hover="img/about_M_KAVANHVIGIL-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Martin Kavanh-Vigil</h4>
@@ -395,7 +395,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_N_LOPEZ.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_N_LOPEZ.jpg" data-original="img/about_N_LOPEZ.jpg" data-hover="img/about_N_LOPEZ-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Nora Lopez</h4>
@@ -414,7 +414,7 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="img" src="img/about_H_REARDEN.jpg" />
+					<img class="imageHoverLoad lazy img" src="img/about_H_REARDEN.jpg" data-original="img/about_H_REARDEN.jpg" data-hover="img/about_H_REARDEN-2.jpg" />
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Haley Rearden</h4>
@@ -492,7 +492,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazyload/1.9.1/jquery.lazyload.js"></script>
+<script src="js/lazyload.js"></script>
 <script src="js/material-kit.min.js"></script>
 <script src="js/init.js"></script>
 </body>
