--- a/air.html
+++ b/air.html
@@ -70,17 +70,34 @@
 			<div class="col-md-6">
 				<h3><b>Conditioning</b></h3>
 				<h5>BioTherm has teamed up with ChillKing to bring you a variety of greenhouse cooling solutions. We offer a wide array of chiller sizes and where electricity is at a premium, we offer an optional natural gas engine driven compressor. Chilled water can be distributed with many space saving options including custom air handling units as well as BioTherm fin products.</h5>
+				
+
 				<h3><b>Dehumidification</b></h3>
+
 				<h5>BioTherm understands the demands of indoor gardening and greenhouse crops. A major issue is moisture control &amp; humidity management. ChillKing has developed a line of pragmatic dehumidification solutions for agricultural applications without compromising performance: The DehuKing! A saturated atmosphere will result in moisture removal up to 2GPH per KW.</h5>
 				<h5>The units were developed to make sure the equipment was easily servicable, so replacement parts can be purchased at most refridgeration and HVAC supply stores (and other brands can be substituted with our approval if the exact part number cannot be located).
-				<p><a href="hydro-flood.html"><button type="button" class="btn btn-success">Read More</button></a>
+				<img src="img/air_dehuking.jpg" class="figure-img img-fluid rounded" alt="">
+				<span class="d-block p-2 bg-success text-white"></span>
+				<h3><b>Sanitization and Filtration</b></h3>
+				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
 			</div>
 			<div class="col-md-6">
 				<h3><b>CO<sub>2</sub> Enrichment</b></h3>
+					<img src="img/air_CO2.jpg" class="figure-img img-fluid rounded" alt="">
+					<span class="d-block p-2 bg-success text-white"></span>
 				<h5>CO<sub>2</sub> levels are naturally low in a greenhouse environment as plants use available CO<sub>2</sub> as part of the photosynthetic process. Increasing CO<sub>2</sub> levels above ambient conditions promotes increased plant growth and health. With the right condensing boiler system in place, a BioTherm CO<sub>2</sub> System can easily be integrated to achieve elevated CO<sub>2</sub> levels in the greenhouse environment. BioTherm systems pull CO<sub>2</sub> directly from the boilers exhaust gases and distribute them uniformly into the greenhouse environment, while ensureing other harmful gases are kept at a safe level. With a BioTherm CO<sub>2</sub> System, there is no need for large bulk tanks, or individual CO<sub>2</sub> burners. Theese systems can be used in indoor and greenhouse operations. </h5>
-				<p><a href="hydro-toob.html"><button type="button" class="btn btn-success">Read More</button></a></p>
-				<h3><b>Sanitization and Filtration</b></h3>
-				<h5>Each DehuKing unit comes with UV lights to sanitize the air as well as a variety of filtration</h5>
+				<h3><b>Cool... with Natural Gas!</b></h3>
+				<h5>BioTherm and ChillKing have developed pragmatic horticulture-driven solutions to cool your greenhouse.</h5>
+				<img src="img/air_chillking_gas.jpg" class="figure-img img-fluid rounded" alt="">	
+				<span class="d-block p-3 bg-success text-white"><b>
+					<h4><b>Additional Benefits:</b></h4>
+					<ul>
+						<li>ChillKing has developed a line of natural gas combustion engines to drive your chiller compressor which can reduce your energy bill up to 70%.</li>
+						<li>Whether BioTherm fin products or ChillKing space saving air handling units, distribution system options ensure your cooling system stays out of the way of your plants allowing you to maximize your growing footprint.</li>
+					</ul>
+				</b></span>
+				<span class="d-block p-2 bg-success text-white"></span>
+
 			</div>
 		</div>
 		<div class="row">
@@ -116,31 +133,6 @@
 				</span>
 				</a>
 				<span class="d-block p-2 bg-success text-white"></span>
-			</div>
-			<div class="col-md-4">
-				<div class="card card-nav-tabs">
-					<div class="card-header card-header-success">
-						<div class="nav-tabs-navigation">
-							<div class="nav-tabs-wrapper">
-								<ul class="nav nav-tabs" data-tabs="tabs">
-									<li class="nav-item"><a class="nav-link active" href="#Dehu" data-toggle="tab">DehuKing</a></li>
-									<li class="nav-item"><a class="nav-link" href="#Chill" data-toggle="tab">ChillKing</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="card-body ">
-						<div class="tab-content text-center">
-							<div class="tab-pane active" id="Dehu">
-								<p>DehuKing offers free-standing, self-contained dehumidification systems. Optimize the air in your growing environment with a dehumidifier that also filters, ionizes, and sanitizes. Multiple options available to customize your dehumidification.</p>
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-							<div class="tab-pane" id="CHill">
-								<!--<a href=""><button type="button" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Order Now</button></a>-->
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 
