--- a/case-heat-micheals.html
+++ b/case-heat-micheals.html
@@ -181,7 +181,7 @@
 		<div class="col-md-3">
 			<h5>Connect</h5>
 			<p><a href="tel:1-800-438-4328"><strong>800-438-4328</strong></a></p>
-				<script>document.write("<n uers='znvygb:vasb@ovbgurezfbyhgvbaf.pbz'>vasb@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
+				<script>document.write("<n uers='znvygb:ovbgurezfbyhgvbaf@ovbgurezfbyhgvbaf.pbz'>ovbgurezfbyhgvbaf@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script>
 			<ul class="social-buttons">
 				<li><a href="https://www.instagram.com/biothermsolutions/" class="btn btn-just-icon btn-link btn-instagram"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="https://www.linkedin.com/company/trueleaf-technologies" class="btn btn-just-icon btn-link btn-facebook"><i class="fab fa-linkedin"></i></a></li>
