index rewrite for og:prop urls

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
-	<meta property="og:url" content="https://biotherm.davidawindham.com/www/" />
+	<meta property="og:url" content="http://www.biothermsolutions.com/" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="BioTherm Solutions">
-	<meta property="og:description" content="Climate Systems - Hydro Sciences - Data &amp; Automation">
-	<meta property="og:image" content="https://biotherm.davidawindham.com/www/img/biotherm-open-graph.jpg" />
+	<meta property="og:description" content="Heating Systems - Hydro Sciences - Optimized Air">
+	<meta property="og:image" content="http://www.biothermsolutions.com//img/biotherm-open-graph.jpg" />
 			
 	<link rel="stylesheet" href="css/fontawesome.css">
 	<link rel="stylesheet" href="css/animate.css">
