--- a/heat.html
+++ b/heat.html
@@ -214,7 +214,7 @@
 				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
 			</div>
-			<div class="col-md-4">
+			<!--<div class="col-md-4">
 				<a href="case-heat-orozco.html">
 				<span class="d-block p-4 bg-dark text-white">
 					<img src="img/case_manfred.jpg" style="border:4px solid;" class="figure-img img-fluid rounded" alt="">
@@ -223,7 +223,7 @@
 				</span>
 				</a>
 				<span class="d-block p-2 bg-heat text-white"></span>
-			</div>
+			</div>-->
 		</div>
 		
 	<div class="container section">
