--- a/air.html
+++ b/air.html
@@ -47,7 +47,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h1><img class="img" src="img/biotherm-tech.png" style="width:80px;"/> Optimized <b>Air</b></h1>
-				<h4><b>Biotherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
+				<h4><b>BioTherm creates innovative air technologies for plant growers. We have partnered with ChillKing to bring growers a new and more efficient way to condition their grow environments.</b></h4>
 			</div>
 		</div>
 		<!--<div class="row header-image-credit">
