--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<div class="main-carousel-item carousel-item carousel-filter carousel-background main-carousel-filter" style="background-image: url('img/heat.jpg')">
 		<div class="carousel-caption d-md-block">
 			<h2 class="animated slideInUp front-title"><b>Improving Turns and Planning for the Future</b></h2>
-			<h3 class="animated fadeInUp">Patrick Herzing - Micheal's Greenhouse, Cheshire CT</h3>
+			<h3 class="animated fadeInUp">Patrick Herzing - Michael's Greenhouse, Cheshire CT</h3>
 			<p><a href="case-heat-micheals.html"><button type="button" class="btn btn-danger"><b>Read the Case Study</b></button></a></p>
 		</div>
 	</div>
