--- a/heat-applications-space-top.html
+++ b/heat-applications-space-top.html
@@ -9,6 +9,14 @@
 	<link rel="apple-touch-icon" href="img/biotherm_apple-icon.png">
 	<link rel="icon" href="img/biotherm_icon.png">
 	<title>Top Space Heat | BioTherm Solutions</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-1906067-38"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-1906067-38');
+	</script>
 </head>
 
 <body>
