rm shawn lora ch dan

--- a/about.html
+++ b/about.html
@@ -239,22 +239,6 @@
 		<div class="col-md-3">
 			<div class="card card-profile card-plain">
 				<div class="card-header card-avatar">
-					<img class="imageHoverLoad lazy img" src="img/about_S_RANSFORD.jpg" data-original="img/about_S_RANSFORD.jpg" data-hover="img/about_S_RANSFORD.jpg" />
-				</div>
-				<div class="card-body">
-					<h4 class="card-title">Shawn Ransford</h4>
-					<h6 class="card-category text-muted">CINO</h6>
-					<p><small><script>document.write("<n uers='znvygb:fenafsbeq@ovbgurezfbyhgvbaf.pbz'>fenafsbeq@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-238-5847">707-238-5847</a></p>
-				</div>
-				<div class="card-footer justify-content-center">
-
-				</div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-avatar">
 					<img class="imageHoverLoad lazy img" src="img/about_D_WHITTEMORE.jpg" data-original="img/about_D_WHITTEMORE.jpg" data-hover="img/about_D_WHITTEMORE-2.jpg" />
 				</div>
 				<div class="card-body">
@@ -293,7 +277,7 @@
 				</div>
 				<div class="card-body">
 					<h4 class="card-title">Dan Kuipers</h4>
-					<h6 class="card-category text-muted">Director of Sales</h6>
+					<h6 class="card-category text-muted">Senior Sales Executive</h6>
 					<p><small><script>document.write("<n uers='znvygb:qxhvcref@ovbgurezfbyhgvbaf.pbz'>qxhvcref@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
 					<p class="card-description"><a href="tel:+1616-396-6101">616-396-6101</a></p>
 				</div>
@@ -386,22 +370,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-3">
-			<div class="card card-profile card-plain">
-				<div class="card-header card-avatar">
-					<img class="imageHoverLoad lazy img" src="img/about_N_LOPEZ.jpg" data-original="img/about_N_LOPEZ.jpg" data-hover="img/about_N_LOPEZ-2.jpg" />
-				</div>
-				<div class="card-body">
-					<h4 class="card-title">Nora Lopez</h4>
-					<h6 class="card-category text-muted">Shipping/Receiving/Accounting Clerk</h6>
-					<p><small><script>document.write("<n uers='znvygb:aybcrm@ovbgurezfbyhgvbaf.pbz'>aybcrm@ovbgurezfbyhgvbaf.pbz</n>".replace(/[a-zA-Z]/g, function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));</script></small></p>
-					<p class="card-description"><a href="tel:+1707-778-0458">707-778-0458</a></p>
-				</div>
-				<div class="card-footer justify-content-center">
 
-				</div>
-			</div>
-		</div>
 
 	</div>
 	<div class="row">
